--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,7 +72,7 @@ button {
 }
 
 .pageTitle {
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 
 .pageTitle__subTitle {
@@ -88,6 +88,7 @@ ul, ol, blockquote {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
+    padding: 0;
 }
 
 .wrapper {
@@ -302,8 +303,9 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: 12px;
 }
 
+
 .asideColumn {
-    width: 43%;
+    width: 45%;
 }
 
 .social {
@@ -349,7 +351,9 @@ h1, h2, h3, h4, h5, h6 {
 .header .navigation__link.active:not(.navigation__link--white), .footer .navigation__link--white.active, .footer .navigation__item:not(.navigation__item--red) .navigation__link--white:hover, .navigation__link:not(.navigation__link--white):hover {
     border-bottom: 5px solid #EB2E34;;
 }
-
+.navigation__item--menu .navigation__link {
+    border: 0!important;
+}
 .navigation__block {
     width: 100%;
 }
@@ -640,11 +644,6 @@ button.paginationBlock__item {
 }
 
 .slideTitle {
-    font-family: "Bebas Neue";
-    font-size: 80px;
-    font-weight: bold;
-    text-transform: uppercase;
-    line-height: 80px;
     width: 380px;
 }
 .slider:not(.slider--ambassador) .slideTitle {
@@ -852,15 +851,24 @@ button.paginationBlock__item {
     z-index: 10;
 }
 
-.titleText {
+.h1, .h2 {
     padding-left: 14px;
     font-family: Bebas Neue;
     font-weight: bold;
+    font-size: 80px;
+    line-height: 80px;
+    letter-spacing: 3px;
+    color: #31312E;
+}
+.h1.slideTitle--leftpad {
+    padding-left: 0;
+}
+.titleText.h2 {
     font-size: 50px;
     line-height: 50px;
-    letter-spacing: 3px;
-    margin-bottom: 20px;
-    color: #31312E;
+}
+.about__title {
+    width: 90%;
 }
 .aboutTitle__text.titleText {
     padding-left: 0;
@@ -874,7 +882,7 @@ button.paginationBlock__item {
 }
 
 .aboutDescription__content {
-    padding: 14px 0;
+    margin: 20px 0 45px 0;
 }
 
 .aboutDescription__text {
@@ -1012,6 +1020,7 @@ button.paginationBlock__item {
 .ambassadors__filter {
     display: flex;
     margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .mapList__selectBlock .selectBox {
@@ -1362,6 +1371,7 @@ button.paginationBlock__item {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-top: 35px!important;
 }
 .articles__container:not(#articles-slider) {
     flex-wrap: wrap;
@@ -1379,8 +1389,11 @@ button.paginationBlock__item {
 .article__picture {
     width: 100%;
     height: 100%;
+    max-height: 258px;
 }
-
+.storyItem__subText {
+    margin-top: 20px;
+}
 .article {
     background: #FBF8F6;
 }
@@ -1478,6 +1491,7 @@ button.paginationBlock__item {
     font-size: 18px;
     line-height: 22px;
     margin-left: 14px;
+    margin-top: 20px;
     margin-bottom: 40px;
     z-index: 10;
 }
@@ -1503,6 +1517,7 @@ button.paginationBlock__item {
 /*instagram end*/
 /*seo start*/
 .seo__description {
+    margin-top: 20px;
     margin-left: 14px;
 }
 
@@ -2059,6 +2074,7 @@ button.paginationBlock__item {
 /*wiki page start*/
 .wiki {
     padding-bottom: 80px;
+    padding-left: 14px;
 }
 
 .wiki__details {
@@ -2071,7 +2087,7 @@ button.paginationBlock__item {
 
 .detail__summary {
     position: relative;
-    padding: 15px 30px 20px 20px;
+    padding: 15px 60px 20px 22px;
     font-weight: bold;
     font-size: 24px;
     line-height: 26px;
