--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1640,7 +1640,13 @@ button.paginationBlock__item {
     width: 100%;
     z-index: 99;
 }
-
+.searchBox.searchBox--visible {
+    display: flex;
+    position: static;
+}
+.simplepage__block.searchList__wrapper {
+    width:  65%;
+}
 .searchBox__container {
     display: flex;
     justify-content: center;
@@ -1649,7 +1655,19 @@ button.paginationBlock__item {
     padding: 35px 0;
     background: #333333;
 }
-
+.searched {
+    color: #FAF5F1;
+    background: #EB2E34;
+}
+.searchList {
+    list-style-type: none;
+}
+.searchItem__title {
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 30px;
+    color: #31312E;
+}
 .searchBox__title {
     margin-right: 40px;
     font-weight: bold;
@@ -1657,7 +1675,9 @@ button.paginationBlock__item {
     line-height: 32px;
     color: #FFFFFF;
 }
-
+.searchList__item {
+    margin-bottom: 50px;
+}
 .searchBox__input {
     width: 100%;
     height: 54px;
