--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,6 +35,7 @@ body {
 
 button {
     outline: none !important;
+    border: 0;
 }
 
 body.darken .topBar {
@@ -1644,6 +1645,9 @@ button.paginationBlock__item {
     display: flex;
     position: static;
 }
+.search-page .simplepage__block {
+    height: auto;
+}
 .simplepage__block.searchList__wrapper {
     width:  65%;
 }
@@ -1697,15 +1701,15 @@ button.paginationBlock__item {
     position: relative;
     width: 60%;
 }
-
-.searchBox__inputWrapper::after {
-    content: url("../img/search.png");
+.searchBox__submit {
     position: absolute;
     top: 20px;
     right: 20px;
     width: 13px;
     height: 13px;
+    cursor: pointer;
 }
+
 
 ::placeholder, ::-webkit-input-placeholder, ::-moz-placeholder, :-moz-placeholder, :-ms-input-placeholder {
     font-weight: 600;
