change select module and readme

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -672,6 +672,7 @@ button.paginationBlock__item {
 }
 
 .slideTitle--leftpad .slideTitle__text {
+    display: block;
     padding: 0 0 0 14px;
 }
 
@@ -1007,11 +1008,17 @@ button.paginationBlock__item {
     padding: 16px 32px;
     background: #FBF8F6;
 }
-
+.ambassador__sub {
+    height: 96px;
+}
 .ambassador__main {
     margin-bottom: 4px;
 }
-
+.ambassador__img {
+    max-height: 261px;
+    margin-bottom: 3px;
+    overflow: hidden;
+}
 .ambassador__picture {
     width: 100%;
     height: auto;
@@ -1032,9 +1039,11 @@ button.paginationBlock__item {
 }
 
 .ambassador__experience {
-    margin: 12px 0;
+    margin-bottom:  12px;
 }
-
+.ambassador___club {
+    margin-bottom: 12px;
+}
 .ambassador__clubName, .ambassador__experienceValue {
     font-weight: bold;
     font-size: 16px;
@@ -1674,6 +1683,7 @@ button.paginationBlock__item {
 .searchItem__title a {
     color: #31312E;
 }
+
 .searchBox__title {
     margin-right: 40px;
     font-weight: bold;
