--- a/src/css/media.css
+++ b/src/css/media.css
@@ -220,10 +220,9 @@
     }
 
     .ambassador__picture {
-        width: auto;
+        width: 100%;
         height: 100%;
         max-width: 100%;
-        object-fit: none;
     }
 
     .ambassadors__link {
